# ChangeLog for dev-java/jgoodies-looks
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/jgoodies-looks/ChangeLog,v 1.13 2005/12/10 07:06:15 compnerd Exp $

*jgoodies-looks-2.0.4-r1 (21 Aug 2006)

  21 Aug 2006;  <>  jgoodies-looks-2.0.4-r1.ebuild files/digest-jgoodies-looks-2.0.4-r1
  # INSERT ENTRY HERE

  10 Dec 2005; Saleem Abdulrasool <compnerd@gentoo.org>
  jgoodies-looks-1.3.2.ebuild:
  Fixing keywords.

*jgoodies-looks-1.3.2 (10 Dec 2005)

  10 Dec 2005; Saleem Abdulrasool <compnerd@gentoo.org>
  +files/plastic-1.3.2.txt, +files/build-1.3.2.xml,
  +jgoodies-looks-1.3.2.ebuild:
  Version bump from upstream

  22 Jun 2005; Saleem Abdulrasool <compnerd@gentoo.org>
  files/build-1.3.1.xml, jgoodies-looks-1.3.1-r1.ebuild:
  Fixed the doc useflag, thanks to nicoj for noticing it and proposing the
  patches. resolves bug #96746

  18 May 2005; Jan Brinkmann <luckyduck@gentoo.org> files/build-1.3.1.xml:
  jgoodies-looks failed with the doc useflag, thanks to StudiesInWords for
  pointing me to that issue.

  04 May 2005; Jan Brinkmann <luckyduck@gentoo.org>
  jgoodies-looks-1.2.2.ebuild, jgoodies-looks-1.3.1-r1.ebuild:
  stable on amd64, ppc and x86

*jgoodies-looks-1.3.1-r1 (03 Apr 2005)

  03 Apr 2005; Thomas Matthijs <axxo@gentoo.org>
  -jgoodies-looks-1.3_beta1.ebuild, -jgoodies-looks-1.3.1.ebuild,
  +jgoodies-looks-1.3.1-r1.ebuild:
  dont install versioned jar files

*jgoodies-looks-1.3.1 (30 Mar 2005)

  30 Mar 2005; Saleem Abdulrasool <compnerd@gentoo.org>
  +files/plastic-1.3.1.txt, +files/build-1.3.1.xml,
  +jgoodies-looks-1.3.1.ebuild:
  New upstream version. Fixes to build.xml for this version. Fixes for deps.

  30 Mar 2005; Saleem Abdulrasool <compnerd@gentoo.org>
  jgoodies-looks-1.2.2.ebuild:
  Updated the depend to jdk rather than jre and changed version to 1.4.2

*jgoodies-looks-1.3_beta1 (08 Mar 2005)

  08 Mar 2005; Jan Brinkmann <luckyduck@gentoo.org>