@@ -1,4 +1,4 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: /var/cvsroot/gentoo-x86/dev-java/jgoodies-looks/jgoodies-looks-1.3.2.ebuild,v 1.2 2005/12/10 07:06:15 compnerd Exp $
 
@@ -14,10 +14,13 @@ SLOT="2.0"
 KEYWORDS="~amd64 ~ppc ~x86"
 IUSE="doc"
 
+RDEPEND="dev-java/jgoodies-forms"
 DEPEND=">=virtual/jdk-1.4.2
 	dev-java/ant-core
-	app-arch/unzip"
-RDEPEND=">=virtual/jre-1.4.2"
+	app-arch/unzip
+	${RDEPEND}"
+RDEPEND=">=virtual/jre-1.4.2
+	${RDEPEND}"
 
 S="${WORKDIR}/looks-${PV}"
 
