@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/jgoodies-looks
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-java/jgoodies-looks/ChangeLog,v 1.13 2005/12/10 07:06:15 compnerd Exp $
+
+  04 Oct 2006; Vlastimil Babka <caster@gentoo.org>
+  jgoodies-looks-2.0.4-r1.ebuild:
+  Added missing jgoodies-forms dependency.
 
 *jgoodies-looks-2.0.4-r1 (21 Aug 2006)
 
